terraform-kubernetes-deployments-core/manifests/nginx-ingress-controller/1.3.0/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  externalTrafficPolicy: Local
  externalIPs:
  - "${ ingress_loadbalancer_ip }"
